--- a/rooms/roomsurvey/templates/roomsurvey/room.html
+++ b/rooms/roomsurvey/templates/roomsurvey/room.html
@@ -6,17 +6,21 @@
         <!--<link rel="stylesheet" href="{% static 'roomsurvey/style.css' %}">-->
     </head>
 
+    <div align="center" style="padding-top: 30px; padding-bottom: 30px; background-color: #990066">
+        <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width=100>
+    </div>
+
     <body class="bg-light">
 
             <div class="container">
               
                 <!-- Title Text -->
-                <div class="py-5 text-center">
-                    <h2>{{ room }}</h2>
+                <div>
+                    <h1 style="font-family: Lato">3. Confirm Room Details</h1>
                 </div>
 
                 <!-- Room Details Table -->
-                <table class="table table-light" width=200>
+                <table class="table table-light" width=200 style="font-family: Lato">
                         <thead>
                           <tr>
                             <th scope="col"></th>
