--- a/rooms/roomsurvey/templates/roomsurvey/get-room.html
+++ b/rooms/roomsurvey/templates/roomsurvey/get-room.html
@@ -5,22 +5,38 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <!--<link rel="stylesheet" href="{% static 'roomsurvey/style.css' %}">-->
     </head>
+
+    <div align="center" style="padding-top: 30px; padding-bottom: 30px; background-color: #990066">
+        <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width=100>
+    </div>
     
     <body class="bg-light">
         <div class="container">
             
-            <div class="py-5 text-center">
-                <h2>Select Room</h2>
-            </div>
-            
             <div>
-                <p>{{ staircase }}</p>
+                <h1 style="font-family: 'Lato', sans-serif;">2. Select Room</h1>
             </div>
             
-            <form action="/roomsurvey/staircase/{{staircase.staircase_id}}/selectroom" method="post">
+            <form action="/roomsurvey/staircase/{{staircase.staircase_id}}/selectroom" method="post" style="font-family: 'Lato', sans-serif; font-size: 16px">
                 {% csrf_token %}
-                {{ form }}
-                <br><input type="submit" value="Submit" />
+                <table border="0">
+                        <tr>
+                            <th style="padding-right: 20px">Staircase</th>
+                            <td>{{ staircase }}</td>
+                        </tr>
+                    
+                        {% for field in form.visible_fields %}
+                          <tr>
+                            <th>{{ field.label_tag }}</th>
+                            <td>
+                              {{ field.errors }}
+                              {{ field }}
+                              {{ field.help_text }}
+                            </td>
+                          </tr>
+                        {% endfor %}
+                      </table>
+                <br><input class="btn btn-info" type="submit" value="Next" style="font-family: 'Lato', sans-serif;" />
             </form>
         </div>
     </body>
