Improved UX, changed Room model to allow for alphanumeric room numbers.

--- a/rooms/roomsurvey/templates/roomsurvey/room.html
+++ b/rooms/roomsurvey/templates/roomsurvey/room.html
@@ -16,7 +16,9 @@
               
                 <!-- Title Text -->
                 <div>
-                    <h1 style="font-family: Lato">3. Confirm Room Details</h1>
+                    <h1 style="font-family: Lato">2. Confirm Room Details</h1>
+                    <p style="font-family: Lato; font-size: 16px">Have a quick look at these details. Do they appear correct?
+                    </p>
                 </div>
 
                 <!-- Room Details Table -->
@@ -79,5 +81,6 @@
                             </tr>
                         </tbody>
                 </table>
+                <a href="../survey/{{ room.room_id }}" class="btn btn-info" role="button" style="font-family: 'Lato', sans-serif;">Looks Good!</a>
     </body>
 </html>
