--- a/rooms/roomsurvey/templates/roomsurvey/survey.html
+++ b/rooms/roomsurvey/templates/roomsurvey/survey.html
@@ -14,7 +14,11 @@
         <div class="container">
             
             <div>
-                <h1 style="font-family: Lato">4. Survey</h1>
+                <h1 style="font-family: Lato">3. Survey</h1>
+                <p style="font-family: Lato; font-size: 16px">
+                    Please answer the questions below. This will help us with creating a new banding system
+                    for next year's ballot.
+                    </p>
             </div>
 
             <form action="#" method="post">
