--- a/rooms/roomsurvey/templates/roomsurvey/get-staircase.html
+++ b/rooms/roomsurvey/templates/roomsurvey/get-staircase.html
@@ -14,7 +14,10 @@
         <div class="container">
             
             <div>
-                <h1 style="font-family: 'Lato', sans-serif;">1. Select Staircase</h1>
+                <h1 style="font-family: 'Lato', sans-serif;">1. Find Room</h1>
+                <p style="font-family: Lato; font-size: 16px">Please select the room you occupied during the academic year 2017/18. First select the staircase from
+                    the drop-down list, then select the room.
+                </p>
             </div>
             
             <form action="/roomsurvey/home" method="post" style="font-family: 'Lato', sans-serif; font-size: 16px">
