User can only complete survey once, improved error handling.

--- a/rooms/roomsurvey/templates/roomsurvey/get-room.html
+++ b/rooms/roomsurvey/templates/roomsurvey/get-room.html
@@ -24,7 +24,7 @@
                 {% csrf_token %}
                 <table border="0">
                         <tr>
-                            <th style="padding-right: 20px">Staircase</th>
+                            <th style="padding-right: 20px">Staircase:</th>
                             <td>{{ staircase }}</td>
                         </tr>
                     
@@ -39,7 +39,7 @@
                           </tr>
                         {% endfor %}
                       </table>
-                <br><input class="btn btn-info" type="submit" value="Next" style="font-family: 'Lato', sans-serif;" />
+                <br><input class="btn btn-primary" type="submit" value="Next" style="font-family: 'Lato', sans-serif;" />
             </form>
         </div>
     </body>
