--- a/rooms/roomsurvey/templates/roomsurvey/get-staircase.html
+++ b/rooms/roomsurvey/templates/roomsurvey/get-staircase.html
@@ -34,7 +34,7 @@
                           </tr>
                         {% endfor %}
                       </table><br>
-                      <input class="btn btn-info" type="submit" value="Next" style="font-family: 'Lato', sans-serif;"/>
+                      <input class="btn btn-primary" type="submit" value="Next" style="font-family: 'Lato', sans-serif;"/>
             </form>
         </div>
     </body>
