--- a/rooms/roomsurvey/templates/roomsurvey/room.html
+++ b/rooms/roomsurvey/templates/roomsurvey/room.html
@@ -81,6 +81,6 @@
                             </tr>
                         </tbody>
                 </table>
-                <a href="../survey/{{ room.room_id }}" class="btn btn-info" role="button" style="font-family: 'Lato', sans-serif;">Looks Good!</a>
+                <a href="../survey/{{ room.room_id }}" class="btn btn-primary" role="button" style="font-family: 'Lato', sans-serif;">Looks Good!</a>
     </body>
 </html>
