--- a/rooms/roomballot/templates/roomballot/error.html
+++ b/rooms/roomballot/templates/roomballot/error.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Room Detail View</title>
-    <link rel="stylesheet" href="../../../static/css/bootstrap.css">
+    <title>Error</title>
+    <link rel="stylesheet" href="../../static/css/bootstrap.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
@@ -33,25 +33,19 @@
     <div class="border-bottom">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h2>Are you sure?</h2>
+                <h2>Whoops, an error occurred.</h2>
             </div>
         </div>
     </div>
 
     <div class="row mt-3">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p>You're sure you want to select <b>{{ room }}</b>? This action can't be undone.</p>
+            <p><b>Cause:</b> {{ message }} <br>
+                Sorry about that. You might want to try that again.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div align="left">
-                <a class="btn btn-primary mb-5" href="../{{ room.room_id }}">Cancel</a>
-            </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
-            <div align="right">
-                <form action="post">
-                    <a class="btn btn-primary mb-5" href="../../dashboard">Confirm</a>
-                </form>
+                <a class="btn btn-primary mb-5" href="/roomballot/dashboard">Dashboard</a>
             </div>
         </div>
     </div>
