--- a/rooms/roomballot/templates/roomballot/error.html
+++ b/rooms/roomballot/templates/roomballot/error.html
@@ -40,8 +40,7 @@
 
     <div class="row mt-3">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p><b>Cause:</b> {{ message }} <br>
-                Sorry about that. You might want to try that again.</p>
+            <p><b>Cause:</b> {{ message }}</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div align="left">
